--- a/.github/workflows/completion.yml
+++ b/.github/workflows/completion.yml
@@ -10,5 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: all entries made
-      run: bash ./.github/workflows/check-complete.sh
+    - name: compile the code 
+      run: g++ -Wall -Wextra -o tdd_buckets *.c*
+    - name: run
+      run: ./tdd_buckets
